openapi config tests